--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,6 +32,7 @@
             "label": "C/C++: g++.exe build active file",
             "command": "C:/mingw64/bin/g++.exe",
             "args": [
+                "-std=c++17",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
@@ -39,7 +40,7 @@
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
-                "cwd": "C:/mingw64/bin"
+                "cwd": "${fileDirname}"
             },
             "problemMatcher": [
                 "$gcc"
